<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.signin.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <LinearLayout
            android:id="@+id/row_mobile"
            style="@style/LoginInputRow"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/row_title_mobile"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_static_hint_mobile"
                android:textColor="#ff000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/row_edit_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_hint_mobile"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#88000000"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/row_clear_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:src="@mipmap/ic_edit_clear"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_password"
            style="@style/LoginInputRow"
            android:visibility="gone">

            <TextView
                android:id="@+id/row_title_pwd"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_static_hint_password"
                android:textColor="#ff000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/row_edit_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#88000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_sms"
            style="@style/LoginInputRow">

            <TextView
                android:id="@+id/row_title_sms_code"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_static_hint_verify_code"
                android:textColor="#ff000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/row_edit_sms_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_hint_verify_code"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#9C000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/bt_send_sms"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_send_sms_code"
                android:gravity="center"
                android:text="@string/login_send_sms_code"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_login_tools"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_login_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="start"
                android:minHeight="0dp"
                android:text="@string/login_type_mobile"
                android:textColor="#7D9EC0"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb_save_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical|end"
                android:minHeight="0dp"
                android:text="@string/login_save_password"
                android:textAlignment="viewEnd"
                android:textColor="#7D9EC0"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_login_button"
            android:minHeight="0dp"
            android:text="@string/login_button"
            android:textColor="@color/login_button_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/licences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licences" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7D9EC0"
                android:text="@string/forget_password"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#7D9EC0"
                android:textSize="13sp"
                android:text="@string/divider"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#7D9EC0"
                android:text="@string/sign_up"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>